--- a/public/filetypes.html
+++ b/public/filetypes.html
@@ -14,7 +14,7 @@
   <div class="main-container">
     <center>
     <h1 class="title">Gitloaf supports:</h1>
-      <p>.HTML</p>
+      <p>.HTML + .PHP</p>
       <p>.CSS</p>
       <p>.JS</p>
       <p>.JSON</p>
@@ -31,6 +31,26 @@
       <p>.OTF (fonts)</p>
       <p>.TXT</p>
       <p>.CSV</p>
+      <p>.MP3</p>
+      <p>.WAV</p>
+      <p>.OGG</p>
+      <p>.WEBM</p>
+      <p>.MP4</p>
+      <p>.OGV</p>
+      <p>.WEBMV</p>
+      <p>.PDF</p>
+      <p>.ZIP</p>
+      <p>.GZ</p>
+      <p>.BZ2</p>
+      <p>.7Z</p>
+      <p>.DOC</p>
+      <p>.DOCX</p>
+      <p>.PPT</p>
+      <p>.PPTX</p>
+      <p>.XLS</p>
+      <p>.XLSX</p>
+      <p>.WEBP</p>
+      <p>.BMP</p>
     </center>
   <script>
   (function () {
