--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <div class="main-container">
     <center>
     <h1 class="title">Gitloaf</h1>
-      <p><b>Gitloaf</b> is a nodejs powered CDN that delivers files from github with their correct <b>Content-Type headers</b>, similarly to other cdns such as <a href="https://raw.githack.com">githack</a></p>
+      <p><b>Gitloaf</b> is an open-source nodejs powered CDN that delivers files from github with their correct <b>Content-Type headers</b>, similarly to other cdns such as <a href="https://raw.githack.com">githack</a></p>
       <p>You can see a list of supported file types <a href="filetypes.html">here</a></p>
       <br>
       <p>You can use the converter below to convert your github links into a CDN url</p>
@@ -58,9 +58,24 @@
       const href = style.getAttribute('href');
       style.setAttribute('href', cdnPrefix + href);
     });
+
+    const anchorTags = document.querySelectorAll('a[href^="/"]');
+    anchorTags.forEach((anchor) => {
+      const href = anchor.getAttribute('href');
+      anchor.setAttribute('href', cdnPrefix + href);
+    });
+
+    const buttonTags = document.querySelectorAll('button[data-href^="/"]');
+    buttonTags.forEach((button) => {
+      const href = button.getAttribute('data-href');
+      button.setAttribute('data-href', cdnPrefix + href);
+
+      button.addEventListener('click', () => {
+        window.location.href = cdnPrefix + href;
+      });
+    });
   })();
 </script>
-
     <script src="scripts.js"></script>
 </body>
 </html>
