--- a/public/filetypes.html
+++ b/public/filetypes.html
@@ -13,7 +13,7 @@
 <body>
   <div class="main-container">
     <center>
-    <h1 class="title">Gitloaf supports:</h1>
+    <h1 class="title"><b>Gitloaf</b> supports:</h1>
       <p>.HTML + .PHP</p>
       <p>.CSS</p>
       <p>.JS</p>
