--- a/public/filetypes.html
+++ b/public/filetypes.html
@@ -54,6 +54,13 @@
       <p>.WASM</p>
       <p>.DATA</p>
       <p>.SWF</p>
+      <p>.FLV</p>
+      <p>.OGG / .OGA</p>
+      <p>.OPUS</p>
+      <p>.FLAC</p>
+      <p>.AAC</p>
+      <p>.M4A</p>
+      <p>.EOT</p>
     </center>
   <script>
   (function () {
