--- a/public/updatelog.html
+++ b/public/updatelog.html
@@ -14,6 +14,9 @@
   <div class="main-container">
     <center>
     <h1 class="title"> <b>Gitloaf</b> version:</h1>
+      <p><b>BETA 1.0.2</b></p>
+      <p>- Added support for unity, flash, and more font file types.</p>
+      <br>
       <p><b>BETA 1.0.1</b></p>
       <p>- Changed Cache time from 5 to 10 minutes</p>
       <p>- Fixed jsDelivr/Cloudflare CDN</p>
