--- a/public/filetypes.html
+++ b/public/filetypes.html
@@ -61,6 +61,11 @@
       <p>.AAC</p>
       <p>.M4A</p>
       <p>.EOT</p>
+      <p>.MIN.JS</p>
+      <p>.MIN.CSS</p>
+      <p>.MAP</p>
+      <p>.ATLAS</p>
+      <p>.FNT</p>
     </center>
   <script>
   (function () {
