add .java because eaglarcraft n stuff (some clients work, some dont, idk.

--- a/public/filetypes.html
+++ b/public/filetypes.html
@@ -66,6 +66,8 @@
       <p>.MAP</p>
       <p>.ATLAS</p>
       <p>.FNT</p>
+      <p>supports older browser files (.javascript, etc)</p>
+      <p>.JAVA</p>
     </center>
   <script>
   (function () {
