--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <p><b>Gitloaf</b> is an open-source nodejs powered CDN that delivers files from github with their correct <b>Content-Type headers</b>, similarly to other cdns such as <a href="https://raw.githack.com">githack.</a>
 You can see a list of supported file types <a href="filetypes.html">here</a> and view the update log <a href="updatelog.html">here</a>
       </p>
-      <p>Current version: <b>BETA 1.1.1</b></p>
+      <p>Current version: <b>BETA 1.1.2</b></p>
         <p>In beta versions, some or many games may not work. These issues will be fixed in later versions.</p>
       <br>
       <p>You can use the converter below to convert your github links into a CDN url</p>
@@ -39,6 +39,10 @@ You can see a list of supported file types <a href="filetypes.html">here</a> and
           <label for="converted-jsdelivr-url">jsDelivr CDN URL:</label>
         </div>
           <input type="text" id="converted-jsdelivr-url" placeholder="jsDelivr CDN URL" readonly />
+         <div class="centered">
+          <label for="converted-githack-url">RawGithack CDN URL:</label>
+        </div>
+          <input type="text" id="converted-githack-url" placeholder="RawGithack CDN URL" readonly />
       </div>
     </div>
   </div>
