--- a/public/updatelog.html
+++ b/public/updatelog.html
@@ -14,6 +14,9 @@
   <div class="main-container">
     <center>
     <h1 class="title"> <b>Gitloaf</b> version:</h1>
+      <p><b>BETA 1.1.2</b></p>
+      <p>- Allow users to use rawgithack as a source cdn for files.</p>
+      <br>
       <p><b>BETA 1.1.1</b></p>
       <p>- New file types, support for older browsers</p>
       <br>
