--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@ You can see a list of supported file types <a href="filetypes.html">here</a> and
           <label for="converted-githack-url">RawGithack CDN URL:</label>
         </div>
           <input type="text" id="converted-githack-url" placeholder="RawGithack CDN URL" readonly />
+            <label for="converted-rawgit-url">RawGit CDN URL:</label>
+        </div>
+          <input type="text" id="converted-rawgit-url" placeholder="RawGit CDN URL" readonly />
       </div>
     </div>
   </div>
