--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@ You can see a list of supported file types <a href="filetypes.html">here</a> and
         </div>
           <input type="text" id="converted-gitcf-url" placeholder="GitCF CDN URL" readonly />
           <label for="converted-gitcf-url">GitCF CDN URL:</label>
+          <input type="text" id="converted-gitcf-url" placeholder="GitCF CDN URL" readonly />
       </div>
     </div>
   </div>
