--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@ You can see a list of supported file types <a href="filetypes.html">here</a> and
         </div>
           <input type="text" id="converted-githack-url" placeholder="RawGithack CDN URL" readonly />
             <label for="converted-rawgit-url">RawGit CDN URL:</label>
+          <input type="text" id="converted-rawgit-url" placeholder="RawGit CDN URL" readonly />
         </div>
           <input type="text" id="converted-gitcf-url" placeholder="GitCF CDN URL" readonly />
           <label for="converted-gitcf-url">GitCF CDN URL:</label>
