--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,7 @@ You can see a list of supported file types <a href="filetypes.html">here</a> and
          <div class="centered">
           <label for="converted-githack-url">RawGithack CDN URL:</label>
         </div>
-          <input type="text" id="converted-githack-url" placeholder="RawGithack CDN URL" readonly />
-          <input type="text" id="converted-gitcf-url" placeholder="RawGit CDN URL" readonly />
+          <input type="text" id="converted-rawgit-url" placeholder="RawGit CDN URL" readonly />
           <label for="converted-rawgit-url">RawGit CDN URL:</label>
         </div>
           <input type="text" id="converted-rawgit-url" placeholder="RawGit CDN URL" readonly />
