--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html>
+<html lang="ru">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gitloaf</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://gitloaf.com/gitcfcdn/Rahib777-7/gitloaf/main/public/styles.css">
 </head>
 <body>
   <div class="main-container">
@@ -13,22 +13,24 @@
     <div class="content">
       <form id="url-converter">
         <label for="github-url">Enter GitHub URL:</label>
-        <input type="text" id="github-url" placeholder="https://github.com/user/repo/blob/branch/path/to/file.ext">
+        <input type="text" id="github-url" placeholder="https://github.com/user/repo/blob/branch/path/to/file.ext" />
         <button type="submit">Convert</button>
       </form>
       <div id="converted-url-container">
         <label for="converted-url">CDN URL:</label>
-        <input type="text" id="converted-url" placeholder="CDN URL" readonly>
+        <input type="text" id="converted-url" placeholder="CDN URL" readonly />
         <label for="converted-jsdelivr-url">jsDelivr CDN URL:</label>
-        <input type="text" id="converted-jsdelivr-url" placeholder="jsDelivr CDN URL" readonly>
+        <input type="text" id="converted-jsdelivr-url" placeholder="jsDelivr CDN URL" readonly />
         <label for="converted-githack-url">RawGithack CDN URL:</label>
-        <input type="text" id="converted-githack-url" placeholder="RawGithack CDN URL" readonly>
+        <input type="text" id="converted-githack-url" placeholder="RawGithack CDN URL" readonly />
         <label for="converted-rawgit-url">RawGit CDN URL:</label>
-        <input type="text" id="converted-rawgit-url" placeholder="RawGit CDN URL" readonly>
+        <input type="text" id="converted-rawgit-url" placeholder="RawGit CDN URL" readonly />
         <label for="converted-gitcf-url">GitCF CDN URL:</label>
-        <input type="text" id="converted-gitcf-url" placeholder="GitCF CDN URL" readonly>
+        <input type="text" id="converted-gitcf-url" placeholder="GitCF CDN URL" readonly />
         <label for="converted-statically-url">Statically CDN URL:</label>
-        <input type="text" id="converted-statically-url" placeholder="Statically CDN URL" readonly>
+        <input type="text" id="converted-statically-url" placeholder="Statically CDN URL" readonly />
+        <label for="converted-githubraw-url">GithubRaw CDN URL:</label>
+        <input type="text" id="converted-githubraw-url" placeholder="GithubRaw CDN URL" readonly />
       </div>
     </div>
   </div>
